# crud

./: README.md
client/views/: home.html  write_board.html
server/: .env  datascript.js  html_page.html  html_page.py  main.py  pyproject.toml  requirements.txt
server/core/: setting.py
server/db/models/: conn.py  members.py
server/static/css/: board.css  home.css
server/templates/: board.html  board_edit.html  board_view.html  index.html  write_board.html
