[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["pwsgoooo <pws_01@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"
mysql = "^0.0.3"
mysql-connector-python = "^9.0.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
